force-app/main/default/objects/Krow__Organization__c/Krow__Organization__c.object-meta.xml
<CustomObject>
    <label>Company</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>