force-app/main/default/objects/Krow__Organization__c/fields/Krow__Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>