force-app/main/default/objects/Krow__Organization__c/fields/Krow__Accounting_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Accounting_Company_ID__c</fullName>
    <description>Quick Book Company Id</description>
    <inlineHelpText>Please make sure that company is authorized for transactions.</inlineHelpText>
    <label>Accounting Company ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>