force-app/main/default/objects/Krow__Organization__c/fields/Krow__Customer_Dimension_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Customer_Dimension_ID__c</fullName>
    <label>Customer Dimension ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>