force-app/main/default/objects/Krow__Organization__c/fields/Krow__Default_Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Holiday_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Holiday Schedule</label>
    <referenceTo>Krow__Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>