force-app/main/default/objects/Krow__Organization__c/fields/Krow__Display_Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Timesheet_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Timesheet Notes</label>
    <type>Checkbox</type>
</CustomField>