force-app/main/default/objects/Krow__Organization__c/fields/Krow__Expense_Receipts_Image_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Receipts_Image_View__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <label>Expense Receipts Image View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Thumbnail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>