force-app/main/default/objects/Krow__Organization__c/fields/Krow__Footer__c.field-meta.xml
<CustomField>
    <fullName>Krow__Footer__c</fullName>
    <label>Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>