force-app/main/default/objects/Krow__Organization__c/fields/Krow__Fri__c.field-meta.xml
<CustomField>
    <fullName>Krow__Fri__c</fullName>
    <description>Default Work Schedule on Friday</description>
    <inlineHelpText>Default Work Schedule on Friday</inlineHelpText>
    <label>Fri</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>