force-app/main/default/objects/Krow__Organization__c/fields/Krow__Intacct_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Vendor_Id__c</fullName>
    <label>Intacct Vendor Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>