force-app/main/default/objects/Krow__Organization__c/fields/Krow__Invoice_Approved_Time_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Approved_Time_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Approved Time Only</label>
    <type>Checkbox</type>
</CustomField>