force-app/main/default/objects/Krow__Organization__c/fields/Krow__Logo_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Logo_File_Id__c</fullName>
    <label>Logo File Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>