force-app/main/default/objects/Krow__Organization__c/fields/Krow__Logo_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Logo_Id__c</fullName>
    <label>Logo Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>