force-app/main/default/objects/Krow__Organization__c/fields/Krow__Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Logo_Url__c</fullName>
    <formula>IF(Krow__Logo_Id__c != null,IMAGE((&quot;/servlet/servlet.FileDownload?file=&quot;+ Krow__Logo_Id__c),&apos;&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>