force-app/main/default/objects/Krow__Organization__c/fields/Krow__Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>