force-app/main/default/objects/Krow__Organization__c/fields/Krow__Mon__c.field-meta.xml
<CustomField>
    <fullName>Krow__Mon__c</fullName>
    <description>Default Work Schedule on Monday</description>
    <inlineHelpText>Default Work Schedule on Monday</inlineHelpText>
    <label>Mon</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>