force-app/main/default/objects/Krow__Organization__c/fields/Krow__Organization_Logo__c.field-meta.xml
<CustomField>
    <fullName>Krow__Organization_Logo__c</fullName>
    <formula>IF(Krow__Logo_File_Id__c != null,IMAGE((&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_png&amp;versionId=&quot;+ Krow__Logo_File_Id__c),&apos;&apos;),&apos;&apos;)</formula>
    <label>Organization File Logo</label>
    <type>Text</type>
</CustomField>