force-app/main/default/objects/Krow__Organization__c/fields/Krow__Project_Dimension_UID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Dimension_UID__c</fullName>
    <label>Project Dimension UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>