force-app/main/default/objects/Krow__Organization__c/fields/Krow__Sat__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sat__c</fullName>
    <description>Default Work Schedule on Saturday</description>
    <inlineHelpText>Default Work Schedule on Saturday</inlineHelpText>
    <label>Sat</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>