force-app/main/default/objects/Krow__Organization__c/fields/Krow__Sun__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sun__c</fullName>
    <description>Default Work Schedule on Sunday</description>
    <inlineHelpText>Default Work Schedule on Sunday</inlineHelpText>
    <label>Sun</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>