force-app/main/default/objects/Krow__Organization__c/fields/Krow__Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax_Type__c</fullName>
    <label>Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Tax</fullName>
                <default>true</default>
                <label>Sales Tax</label>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>GST/QST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>