force-app/main/default/objects/Krow__Organization__c/fields/Krow__Thu__c.field-meta.xml
<CustomField>
    <fullName>Krow__Thu__c</fullName>
    <description>Default Work Schedule on Thursday</description>
    <inlineHelpText>Default Work Schedule on Thursday</inlineHelpText>
    <label>Thu</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>