force-app/main/default/objects/Krow__Organization__c/fields/Krow__Tue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tue__c</fullName>
    <description>Default Work Schedule on Tuesday</description>
    <inlineHelpText>Default Work Schedule on Tuesday</inlineHelpText>
    <label>Tue</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>