force-app/main/default/objects/Krow__Organization__c/fields/Krow__Use_Project_Currency_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Krow__Use_Project_Currency_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, project currency will be defaulted on invoice.</description>
    <label>Use Project Currency for Billing</label>
    <type>Checkbox</type>
</CustomField>