force-app/main/default/objects/Krow__Organization__c/fields/Krow__Vendor__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>