force-app/main/default/objects/Krow__Organization__c/fields/Krow__Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
                <default>true</default>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>