force-app/main/default/objects/Krow__Organization__c/fields/Krow__Wed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Wed__c</fullName>
    <description>Default Work Schedule on Wednesday</description>
    <inlineHelpText>Default Work Schedule on Wednesday</inlineHelpText>
    <label>Wed</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>