force-app/main/default/objects/Krow__Organization__c/fields/Krow__Xero_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Xero company in which invoice and/or payment will be posted in Xero.</description>
    <label>Xero Organisation</label>
    <referenceTo>Krow__Xero_Integration_Detail__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>