force-app/main/default/objects/Krow__Organization__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Address__c</columns>
    <columns>Krow__Vendor__c</columns>
    <columns>Krow__Default_Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>